@@ -1,3 +1,6 @@
+* Thu Apr 08 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.4-0
+- Fix data recursion issues
+
 * Wed Feb 24 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.4-0
 - Refactor `list_puppet_params` to avoid excessive looping
 - Disable caching (SIMP-9623)
